renaming + fix MDC + fix recovery SQS failure